docs work + about + branding draft

--- a/template.html
+++ b/template.html
@@ -40,6 +40,11 @@
                         <meta template_body>
                 </article>
         </main>
+        <footer>
+                <img src="/icon.svg" height="28">
+                <p>Copyright © 2022</p>
+
+        </footer>
 </body>
 
 </html>
